--- a/css/hero-banner.css
+++ b/css/hero-banner.css
@@ -34,3 +34,14 @@ h1 {
     font-weight: bold;
 }
 
+#header {
+    height: 50%;
+}
+
+#header-text {
+    transition: 0.2s;
+}
+
+#header-text2 {
+    transition: 0.2s;
+}
