--- a/css/hero-banner.css
+++ b/css/hero-banner.css
@@ -20,11 +20,41 @@ body, html {
 /* Place text in the middle of the image */
 .hero-text {
     text-align: center;
+    padding-bottom: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+}
+
+
+.header-buttons {
+    background: transparent;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    letter-spacing: 3px;
+    font-size: 18px;
+    font-weight: bold;
+    display: inline-block;
+}
+
+.header-button {
+    background: transparent;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    border: 2px solid #e7e7e7
+}
+
+.header-button:hover {
+    background-color: #555555;
 }
 
 h1 {
@@ -34,9 +64,6 @@ h1 {
     font-weight: bold;
 }
 
-#header {
-    height: 50%;
-}
 
 #header-text {
     transition: 0.2s;
