--- a/css/hero-banner.css
+++ b/css/hero-banner.css
@@ -8,13 +8,14 @@ body, html {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/banner.jpg");
 
     /* Set a specific height */
-    height: 50%;
+    height: 33%;
 
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    margin: 0;
 }
 
 /* Place text in the middle of the image */
@@ -33,28 +34,31 @@ body, html {
     background: transparent;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    top: 100%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     letter-spacing: 3px;
     font-size: 18px;
     font-weight: bold;
-    display: inline-block;
 }
 
 .header-button {
     background: transparent;
+    position: relative;
+    transform: translateY(-50%);
     color: white;
-    padding: 15px 32px;
+    padding: 15px 48px;
     text-align: center;
-    display: inline-block;
     font-size: 16px;
-    border: 2px solid #e7e7e7
+    font-weight: bold;
+    border-top: 2px solid #e7e7e7;
+    border-left: 2px solid #e7e7e7;
+    border-right: 2px solid #e7e7e7;
 }
 
 .header-button:hover {
-    background-color: #555555;
+    background-color: rgba(241, 241, 241, 0.3);
 }
 
 h1 {
