--- a/css/image-gallery.css
+++ b/css/image-gallery.css
@@ -29,7 +29,7 @@ body {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 0;
+    top: 8px;
     text-align: left;
     width: 0;
     bottom: 0;
